# pixcraft

./: CMakeLists.txt  CMakePresets.json  README.md
include/: grid.hpp  layer.hpp  ui.hpp
src/: grid.cpp  grid.hpp  main.cpp  ui.cpp  ui.hpp
